tests/matrices/invalid/invalid_vector_negative_length.mtx
%%MatrixMarket vector coordinate real general
-4 3
1 101
0 22
4 404
